Thu Aug 24 000:41:16 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Launcher/PCVisitor.cpp
        * DAnCE/Plan_Launcher/PCVisitor.h
        * DAnCE/Plan_Launcher/PCVisitorBase.cpp
        * DAnCE/Plan_Launcher/PCVisitorBase.h
          Solved the "'class has virtual functions but non-virtual destructor"
          warnings.
          
Wed Aug 23 17:57:15 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Launcher/PCVisitorBase.h
          Solved the "invalid use of undefined type 'struct PCVisitorBase'"
          warnings.

Wed Aug 23 15:22:36 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Launcher/PCVisitor.cpp
          Solved the "unused parameter" warning.

Wed Aug 23 000:04:06 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/RepositoryManager/README
          Made some minor changes.

Wed Aug 23 000:00:43 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * examples/BasicSP/descriptors/basicNodeDaemon.pl
          Use "$ENV{'ACE_ROOT'}/bin" to point to the location of lib file.

Tue Aug 22 23:47:06 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher.mpc
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.h
          Modified these files for RepoMan integration.
          
        * DAnCE/Plan_Launcher/PCVisitor.cpp
        * DAnCE/Plan_Launcher/PCVisitor.h
        * DAnCE/Plan_Launcher/PCVisitorBase.cpp
        * DAnCE/Plan_Launcher/PCVisitorBase.h
        * DAnCE/Plan_Launcher/PCVisitorBase.inl
          Added these files for RepoMan integration.
        
        * examples/BasicSP/RepoMan_Usage.html
          Added this file, which explains how to run the BasicSP example using
          the integrated RepoMan.
        