@@ -23,7 +23,7 @@ downloaded component lib files.</li> <P>
 <li>If you want to use CORBA <em>naming service</em> to get the RepoMan object reference, then please start naming
 service with multicast mode.</li> <P>
 <PRE>
-  $TAO_ROOT/orbsvcs/Naming_Service naming_service -m 1
+  $TAO_ROOT/orbsvcs/Naming_Service/naming_service -m 1
 </PRE>
 
 <li>Build & start JAWS server.</li> <P>
@@ -32,7 +32,8 @@ service with multicast mode.</li> <P>
 $CIAO_ROOT/DAnCE/RepositoryManager.</li>
 <li> Start JAWS:</li>
 <PRE>
-$ACE_ROOT/apps/JAWS/server main
+Change the current directory into $ACE_ROOT/apps/JAWS/server
+main
 </PRE>
 </OL>
 
@@ -68,36 +69,36 @@ RepositoryManagerDeamon -v [NameofRM]
 <OL>
 <li>Not using RepoMan:</li>
 <PRE>
-$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -d flattened_deploymentplan.cdp -k file://EM.ior
+$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -p flattened_deploymentplan.cdp -k file://EM.ior
 </PRE>
 
 <li>Using ior file to get RepoMan, providing the name of one composite componemt:</li>
 <PRE>
-$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -d flattened_deploymentplan.cdp 
--p BasicSP 
+$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -p flattened_deploymentplan.cdp 
+-a BasicSP 
 -k file://EM.ior
--l file://%CIAO_ROOT%\DAnCE\RepositoryManager\RepositoryManagerDeamon.ior
+-l file://$CIAO_ROOT/DAnCE/RepositoryManager/RepositoryManagerDeamon.ior
 </PRE>
 
 <li>Using naming service to get RepoMan, providing the name of one composite componemt:</li>
 <PRE>
-$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -d flattened_deploymentplan.cdp 
--p BasicSP 
+$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -p flattened_deploymentplan.cdp 
+-a BasicSP 
 -k file://EM.ior
 -v [NameofRM]
 </PRE>
 
 <li>Using naming service to get RepoMan, providing the names of several individual componemts:</li>
 <PRE>
-$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -d flattened_deploymentplan.cdp 
--p BMClosedED+BMDevice+BMDisplay+EC 
+$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -p flattened_deploymentplan.cdp 
+-a BMClosedED+BMDevice+BMDisplay+EC 
 -k file://EM.ior 
 -v [NameofRM]
 </PRE>
 
 <li>Using naming service to get RepoMan, providing the types of several individual componemts:</li>
 <PRE>
-$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -d flattened_deploymentplan.cdp 
+$CIAO_ROOT/DAnCE/Plan_Launcher/plan_launcher -p flattened_deploymentplan.cdp 
 -e IDL:BasicSP/EC:1.0+IDL:BasicSP/BMDisplay:1.0+IDL:BasicSP/BMDevice:1.0+IDL:BasicSP/BMClosedED:1.0 
 -k file://EM.ior 
 -v [NameofRM]
