@@ -1,3 +1,11 @@
+Thu Aug 24 15:44:08 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
+
+        * DAnCE/Plan_Launcher/Plan_Launcher.cpp
+          Changed some of the command-line options.
+          
+        * examples/BasicSP/RepoMan_Usage.html
+          Made some minor changes.
+
 Thu Aug 24 000:41:16 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
 
         * DAnCE/Plan_Launcher/PCVisitor.cpp
